--- a/music.htm
+++ b/music.htm
@@ -24,6 +24,8 @@
 				<button id="playpause" title="Play or pause (Space)" onclick="playPause()"></button>
 				<button id="previous" title="Play previous ([)" onclick="previous()"></button>
 				<button id="next" title="Play next (])" onclick="nextBtn()"></button>
+				<button id="volume-down" title="Volume down (-)" onclick="vdnBtn()"></button>
+				<button id="volume-up" title="Volume up (+)" onclick="vupBtn()"></button>
 				<audio id="audio">HTML5 not supported</audio>
 			</div>
 		</div>
